--- a/healthy_nutrition_bot/healthy_nutrition_bot.csproj
+++ b/healthy_nutrition_bot/healthy_nutrition_bot.csproj
@@ -9,11 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0" />
+      <PackageReference Include="supabase" Version="1.1.1" />
       <PackageReference Include="Telegram.Bot" Version="18.1.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="domain\" />
     </ItemGroup>
 
 </Project>
