--- a/healthy_nutrition_bot/healthy_nutrition_bot.csproj
+++ b/healthy_nutrition_bot/healthy_nutrition_bot.csproj
@@ -9,7 +9,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="supabase" Version="1.1.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
       <PackageReference Include="Telegram.Bot" Version="18.1.0" />
     </ItemGroup>
 
