--- a/healthy_nutrition_bot/healthy_nutrition_bot.csproj
+++ b/healthy_nutrition_bot/healthy_nutrition_bot.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="Telegram.Bot" Version="18.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="domain\entities\shop\" />
+    </ItemGroup>
+
 </Project>
