--- a/healthy_nutrition_bot/healthy_nutrition_bot.csproj
+++ b/healthy_nutrition_bot/healthy_nutrition_bot.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0" />
+      <PackageReference Include="Moq" Version="4.20.72" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Quartz" Version="3.14.0" />
       <PackageReference Include="supabase" Version="1.1.1" />
